# LangGraph_Multi_Agent

./: .env.example  .gitignore  CLAUDE.md  README.md  architecture-diagrams.html  cd-ecs-deploy-steps.md  cd-lambda-deploy-steps.md  ci-cd-eks-steps.md  ci-pipeline-steps.md  completed.md  docker-compose.yml  eks-enterprize-deploy-steps.md  eks-manual-deploy-steps.md  enterprize-deploy-steps.md  github-workflow-trigger.md  grand-enterprize-deploy-steps.md  graph.py  main.py  plan.md  pyproject.toml  real-aws-cicd-setup.md
.github/workflows/: cd-ecs.yml  cd-eks.yml  cd-lambda.yml  cd.yml  ci.yml
argocd/: multi-agent-application.yaml
auth/: dependencies.py
backend/: .dockerignore  .env.example  Dockerfile  config.py  pyproject.toml  requirements.txt  run_api.py
backend/api/: dependencies.py  error_handlers.py  logging_config.py  main.py  otel_client.py
backend/auth/: dependencies.py  jwt.py  password.py
backend/db/: base.py
backend/docs/: _diagram-render-test.html  auth-flow.md
backend/multi_agent/: consts.py  graph.py  ingestion.py  main.py  state.py
backend/scripts/: smoke_test_redis.py
cache/: client.py  sessions.py
db/: base.py
db/models/: message.py  (+1 more)
frontend/: .dockerignore  .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.mts  vitest.setup.tsx
infra/: apigateway.tf  backend-aws.hcl  backend-localstack.hcl  ecr.tf  iam.tf  outputs.tf  providers.tf  s3.tf  variables.tf  versions.tf
nodes/: __init__.py  generate.py  grade_documents.py  retrieve.py  web_search.py
setup/: db_setup.md
(+148 files in other folders)
